--- a/notebook/test.ipynb
+++ b/notebook/test.ipynb
@@ -87,30 +87,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-01-05 20:26:31 INFO: Load pretrained SentenceTransformer: allenai-specter\n",
-      "2022-01-05 20:26:49 INFO: Use pytorch device: cuda\n",
-      "2022-01-05 20:26:49 INFO: Missing data detected. Dropping them\n",
-      "2022-01-05 20:26:49 INFO: ========== Step1: Calculating Embeddings ==========\n",
-      "Batches: 100%|██████████| 3/3 [00:02<00:00,  1.43it/s]\n",
-      "2022-01-05 20:26:52 INFO: ========== Step2: Topic modeling ==========\n",
-      "2022-01-05 20:26:52 INFO: Initializing the topic model\n",
-      "2022-01-05 20:26:52 INFO: Training the topic model\n",
-      "2022-01-05 20:26:54,313 - BERTopic - Reduced dimensionality with UMAP\n",
-      "2022-01-05 20:26:54,324 - BERTopic - Clustered UMAP embeddings with HDBSCAN\n",
-      "2022-01-05 20:26:54 INFO: Populating Topic Results\n",
-      "2022-01-05 20:26:54 INFO: ========== Step3: STriP Network ==========\n",
-      "2022-01-05 20:26:54 INFO: Cosine similarity\n",
-      "2022-01-05 20:26:54 INFO: Calculating optimal threshold\n",
-      "2022-01-05 20:26:54 INFO: Number of connections: 126\n",
-      "2022-01-05 20:26:54 INFO: Calculating Network Plot\n",
-      "2022-01-05 20:26:54 INFO: ========== Model Fit Successfully! ==========\n"
+      "2022-01-05 20:42:12 INFO: Load pretrained SentenceTransformer: allenai-specter\n",
+      "2022-01-05 20:42:36 INFO: Use pytorch device: cuda\n",
+      "2022-01-05 20:42:36 INFO: Missing data detected. Dropping them\n",
+      "2022-01-05 20:42:36 INFO: ========== Step1: Calculating Embeddings ==========\n",
+      "Batches: 100%|██████████| 3/3 [00:02<00:00,  1.17it/s]\n",
+      "2022-01-05 20:42:41 INFO: ========== Step2: Topic modeling ==========\n",
+      "2022-01-05 20:42:41 INFO: Initializing the topic model\n",
+      "2022-01-05 20:42:41 INFO: Training the topic model\n",
+      "2022-01-05 20:42:50,425 - BERTopic - Reduced dimensionality with UMAP\n",
+      "2022-01-05 20:42:50,437 - BERTopic - Clustered UMAP embeddings with HDBSCAN\n",
+      "2022-01-05 20:42:50 INFO: Populating Topic Results\n",
+      "2022-01-05 20:42:50 INFO: ========== Step3: STriP Network ==========\n",
+      "2022-01-05 20:42:50 INFO: Cosine similarity\n",
+      "2022-01-05 20:42:50 INFO: Calculating optimal threshold\n",
+      "2022-01-05 20:42:50 INFO: Number of connections: 126\n",
+      "2022-01-05 20:42:50 INFO: Calculating Network Plot\n",
+      "2022-01-05 20:42:50 INFO: ========== Model Fit Successfully! ==========\n"
      ]
     },
     {
@@ -1139,6 +1139,35 @@
    ],
    "source": [
     "stripnet.most_important()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['bertopic==0.9.4',\n",
+       " 'networkx==2.6.3',\n",
+       " 'numpy==1.22.0',\n",
+       " 'pandas==1.3.5',\n",
+       " 'plotly==5.5.0',\n",
+       " 'pyvis==0.1.9',\n",
+       " 'scikit_learn==1.0.2',\n",
+       " 'sentence_transformers==2.1.0',\n",
+       " 'setuptools==58.0.4']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pathlib\n",
+    "pathlib.Path(\"../requirements.txt\").read_text().splitlines()"
    ]
   },
   {
